plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0-M2'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.hibernate.orm' version '7.2.4.Final'
    id 'org.graalvm.buildtools.native' version '0.11.4'
}

group = 'kim.biryeong'
version = '0.0.1-SNAPSHOT'
description = 'perfume'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

configurations.all {
    resolutionStrategy.eachDependency { details ->
        if (details.requested.group == 'commons-beanutils' && details.requested.name == 'commons-beanutils') {
            details.useVersion '1.11.0'
        }
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'com.opencsv:opencsv:5.9'
}

hibernate {
    enhancement {
        enableAssociationManagement = true
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
